--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <label for="proDesc">proDesc:</label>
     <textarea  type="text"  class="form-control mb-3" name="proDesc" id="proDesc"></textarea>
-    <button  id="addBtn" class="btn btn-primary">Add Product</button> <!--fuction craeteProduct-->
+    <button  id="addBtn" class="btn btn-primary my-5">Add Product</button> <!--fuction craeteProduct-->
       <button onclick="clearForm()" class="btn btn-danger">Reset</button>
   </div> 
    <!--fuction clearForm  -->
